client/components/ManagePortfolio/manage-portfolio-mobile.scss
@media screen and (max-width: 768px) {
  
  #asset_tab {

    ._one_button {
      margin-top: 3vw;
    } 
    
  }




  #trusty_manage_modal {
    z-index: 3000;
    a {
      z-index: 3000;
      color: white;
      font-size: 12vw;
      padding-right: 3vw;
      padding-top: 3vw;
      top:0;
      right:0;
    }
  }
  
  .trusty_portfolio_tabs {

    span.portfolio_asset {
      width: 19vw;
      color: white;
    }

    .modal-overlay.is-active {
      z-index: 3000;
      //background-color: black !important;
    }

    //padding-top: 5vw;
    h5 {
      font-family: Gotham_Pro;
    }

    table thead tr th {
        font-size: 3.4vw;
        text-align: left;
        padding-left: 11.5vw;
    }

    table thead tr th:first-child {
        padding-left: 10.6vw;
    }

    table thead tr th:last-child {
        text-align: center;
        padding-left: 0;
    }

    table tbody {
      .trusty_portfolio_arrow_right {
        margin-left: 2.6vw;
        svg {
          height: 5.7vw;
          path  {
            fill: #9ea2a5;
          }
        }
      }
      tr .portfolio_item._0{
        padding-top: 3vw;

      }

      tr .portfolio_item {
          font-size: 5.0vw;
          margin-top: 4.7vw;
          display: flex;
          align-items: center;
        }

        tr:first-child .portfolio_item {
          margin-top: 3vw;
        }

        tr td:last-child {
          padding-right: 1.8vw;
        }

      }

      ._total_future_share {
        margin-top: 0.7vw;
        margin-bottom: 7.3vw;;
        text-align: right;
        span {
          width: 48vw;
          padding: 0;
          text-align: center;
        display: inline-block;
        font-size: 7.7vw;
          margin-top: 2.3vw;
          //padding-left: 14.7vw;
          //margin-right: 14.5vw;
          //margin-bottom: 6vw;
        font-family: Gotham_Pro_Bold;

      }
      }


    .tab-link {

      height: 11.4vw;
        font-size: 4.4vw;
        line-height: 11.7vw;

    }

    .tab-link-active {
      border-bottom: 1.5vw solid white;
    }

    .tabs-header-container {
      height: 11.4vw;
      //position: fixed;
      //top: 10vw;
      width: 100%;
    }



    .tab-content {
      font-family: Gotham_Pro;
        font-size: 4.8vw;
        //margin-bottom: 15vw;
    }

    ._plus {
      color: #79c610;
    }
    ._minus {
      color: #ff3030;
    }

    ._minus {
      line-height: 7vw;
      &.less {

      }
    }

    ._plus {
      display: inline-block;
      font-family: Gotham_Pro;
      text-align: center;
      width: 9vw;
    }

    ._minus, ._plus {
      $_size: 8vw;

      position: relative;
      display: inline-block;
      width: $_size;
      height: $_size;
      //line-height: 9vw;
      border-radius: 50%;
      color: white;
      span {
        position: absolute;
        top:-1px;
        left:-1px;
        display: inline-block;
        width: $_size;
        height: $_size;
        //line-height: 9.3vw;
        text-align: center;
      }

      svg, svg path {
        stroke-width: 1.6;
        display: inline-block;
        width: $_size;
        height: $_size;
      }
    }
  }

  .manage_third_tab, .manage_second_tab {
    width: 100%;
    text-align: center;
    font-family: Gotham_Pro;
    position: absolute;
    top: 57.4%;
    transform: translateY(-50%);
    p { 
      margin-bottom: 0;
      font-size: 7.3vw; 
      line-height: 9vw;
    }

    img {
      margin-bottom: 5vw;
    }
  }

  .manage_second_tab {
    img {
      width: 43vw;
    }
  }

  .manage_third_tab {
    img { 
      width: 25vw
    }
  }

}

